tests/fixtures/invalid/ord_float.py
# Cannot call ord() with Float
x = ord(1.0)
